# tinyml-on-microchips

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
lib/: README.txt
lib/model-parameters/: model_metadata.h  model_variables.h
lib/tflite-model/: tflite_learn_887758_35.h  tflite_learn_887758_35.tflite
src/: main.cpp
test_package/: conanfile.py
training-data/: README.txt  info.labels
training-data/testing/: info.labels
training-data/training/: info.labels
